--- a/diffxpy_tutorials/test/multi/versus_rest.ipynb
+++ b/diffxpy_tutorials/test/multi/versus_rest.ipynb
@@ -40,7 +40,7 @@
     "from batchglm.api.models.nb_glm import Simulator\n",
     "\n",
     "sim = Simulator(num_observations=2000, num_features=100)\n",
-    "sim.generate_sample_description(num_batches=4, num_confounders=0)\n",
+    "sim.generate_sample_description(num_batches=4, num_conditions=0)\n",
     "# sample parameters from positive truncated N(1, 0.1)\n",
     "mu=1; phi=0.1\n",
     "sim.generate_params(rand_fn_loc=lambda size: mu + scipy.stats.truncnorm.rvs(-mu / phi, np.infty, scale=phi, size=size))\n",
