updated tutorials to new versions diffxpy 0.5.0 and batchglm 0.5.0
also cleaned up and removed some unnecessary tutorials.

--- a/diffxpy_tutorials/enrich/enrich.ipynb
+++ b/diffxpy_tutorials/enrich/enrich.ipynb
@@ -4,25 +4,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/david.fischer/miniconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import logging\n",
-    "\n",
     "import scipy.stats\n",
     "import numpy as np\n",
-    "import scanpy.api as sc"
+    "import scanpy.api as sc\n",
+    "\n",
+    "import diffxpy.api as de"
    ]
   },
   {
@@ -38,134 +30,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from batchglm.api.models.nb_glm import Simulator\n",
+    "from batchglm.api.models.glm_nb import Simulator\n",
     "\n",
     "sim = Simulator(num_observations=2000, num_features=100)\n",
-    "sim.generate_sample_description(num_batches=0, num_confounders=2)\n",
-    "# sample parameters from positive truncated N(1, 0.1)\n",
-    "mu=1; phi=0.1\n",
-    "sim.generate_params(rand_fn_loc=lambda size: mu + scipy.stats.truncnorm.rvs(-mu / phi, np.infty, scale=phi, size=size))\n",
-    "sim.generate_data()\n",
-    "\n",
-    "# count data\n",
-    "X = sim.X\n",
-    "# sample description\n",
-    "sample_description = sim.sample_description"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The sample description should be a pandas DataFrame with `num_observations` rows.\n",
-    "Each column should represent a property of the dataset.\n",
-    "\n",
-    "The module `batchglm.api.data` contains some helper functions which can be useful to create this sample description:\n",
-    "\n",
-    "- `sample_description_from_anndata()`\n",
-    "- `sample_description_from_xarray()`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>condition</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>observations</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             condition\n",
-       "observations          \n",
-       "0                    0\n",
-       "1                    1\n",
-       "2                    0\n",
-       "3                    1\n",
-       "4                    0\n",
-       "5                    1\n",
-       "6                    0\n",
-       "7                    1\n",
-       "8                    0\n",
-       "9                    1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample_description.iloc[:10,:]"
+    "sim.generate_sample_description(num_batches=0, num_conditions=2)\n",
+    "sim.generate_params()\n",
+    "sim.generate_data()"
    ]
   },
   {
@@ -177,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = sc.AnnData(X=np.asarray(X), obs=sample_description)"
+    "adata = sc.AnnData(X=np.asarray(sim.X), obs=sim.sample_description)"
    ]
   },
   {
@@ -200,16 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import diffxpy.api as de"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,8 +103,9 @@
     "\n",
     "test = de.test.t_test(\n",
     "    data=adata,\n",
-    "    grouping=\"condition\"\n",
-    ")\n"
+    "    grouping=\"condition\",\n",
+    "    dtype=\"float64\"\n",
+    ")"
    ]
   },
   {
@@ -255,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -307,23 +169,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>setB</td>\n",
-       "      <td>0.309319</td>\n",
-       "      <td>0.618637</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>55</td>\n",
+       "      <th>0</th>\n",
+       "      <td>setA</td>\n",
+       "      <td>0.424291</td>\n",
+       "      <td>0.602433</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>81</td>\n",
        "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>setA</td>\n",
-       "      <td>0.762971</td>\n",
-       "      <td>0.762971</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>55</td>\n",
+       "      <th>1</th>\n",
+       "      <td>setB</td>\n",
+       "      <td>0.602433</td>\n",
+       "      <td>0.602433</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>81</td>\n",
        "      <td>100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -332,11 +194,11 @@
       ],
       "text/plain": [
        "    set      pval      qval  intersection  reference  enquiry  background\n",
-       "1  setB  0.309319  0.618637             5          7       55         100\n",
-       "0  setA  0.762971  0.762971             2          4       55         100"
+       "0  setA  0.424291  0.602433             4          4       81         100\n",
+       "1  setB  0.602433  0.602433             6          7       81         100"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
