--- a/diffxpy_tutorials/test/single/t_test.ipynb
+++ b/diffxpy_tutorials/test/single/t_test.ipynb
@@ -37,18 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from batchglm.api.models.nb_glm import Simulator\n",
+    "from batchglm.api.models.glm_nb import Simulator\n",
     "\n",
-    "sim = Simulator(num_observations=2000, num_features=100)\n",
+    "sim = Simulator(num_observations=2000, num_features=1000)\n",
     "sim.generate_sample_description(num_batches=0, num_conditions=2)\n",
-    "# sample parameters from positive truncated N(1, 0.1)\n",
-    "mu=1; phi=0.1\n",
-    "sim.generate_params(rand_fn_loc=lambda size: mu + scipy.stats.truncnorm.rvs(-mu / phi, np.infty, scale=phi, size=size))\n",
+    "sim.generate_params()\n",
     "sim.generate_data()\n",
     "\n",
-    "# count data\n",
     "X = sim.X\n",
-    "# sample description\n",
     "sample_description = sim.sample_description"
    ]
   },
